--- a/css/preload.css
+++ b/css/preload.css
@@ -8,16 +8,20 @@
 	top:0;
 	width:100%;
 	height:100vh;
-	/*background-image:url('images/bg.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-origin: content-box;*/
 	background-color: #212d74;
 	display: flex;
 	justify-content: center;
 	align-items: center;
     transition: opacity 0.5s ease;
     z-index:2000;
+}
+@media (orientation:portrait){
+	.preload{
+		display:flex;
+		justify-content:center;
+		width:90%;
+		margin-left:auto;
+	}
 }
 .preload::before{
 	content: "";
