--- a/css/registration.css
+++ b/css/registration.css
@@ -281,7 +281,7 @@ margin-top: -2px;
      height:300px;
     border-radius:30px 30px 30px 0px;
     box-shadow:2px 10px 30px gray;
-    background-color:#2a3990;
+    background-color:rgba(35, 66, 113, 0.9);
     transform-style:preserve-3d;
     transition: all 0.5s ease-in-out;
     color:white;
@@ -307,7 +307,7 @@ margin-top: -2px;
     border-radius:30px 30px 0px 30px;
     z-index: 0;
     transform: rotateY(-180deg);
-    background: #7890cd;
+    background: rgba(35, 66, 113, 0.9);
   }
   .delegate:hover .delegate-flip
   {
@@ -318,8 +318,8 @@ margin-top: -2px;
    {
       border-radius:10px;
       
-      box-shadow: 2px 10px 30px rgb(44, 90, 114);
-      background:#2a3990;
+      box-shadow: 2px 10px 30px rgba(35, 66, 113, 0.9);
+      background:rgba(35, 66, 113, 0.9);
       color:#fff ;
       outline:none;
       font-weight:bolder;
