--- a/css/registration.css
+++ b/css/registration.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Crimson+Text|Karla:400i&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Caveat|Playfair+Display|Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Crete+Round|Pacifico|Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Poiret+One|Titillium+Web&display=swap');
 ::-moz-selection {
     background: #000;
     color: #fff; }
@@ -27,12 +28,13 @@
 h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
   /*font-family: "Noto Sans", sans-serif;*/
-  font-family: 'Crete Round',sans-serif!important;
+  font-family: 'Bebas Neue', !important;
+font-weight: bold;
   }
 p,a
 {
   /*font-family: "Noto Sans", sans-serif!important;*/
-  font-family: 'Playfair',sans-serif!important;
+  font-family: 'Bebas Neue',!important;
 }
   .text-style{
     color:white;
@@ -99,11 +101,9 @@ margin-top: -2px;
     letter-spacing: 1.2px;
     word-spacing: 1.2px;
   }
-    @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600');
   body {
     margin: 0;
     padding:0;
-    font-family: 'Work Sans', sans-serif;
     font-weight: 400;
     overflow-x:hidden;
     background-size: cover;
@@ -125,41 +125,41 @@ margin-top: -2px;
       position:relative;
       right:5%;
     }
-    .hamburger{
-      position:absolute;
-      top:50%;
-      transform: translate(-5%,-50%);
-      cursor:pointer;
-      right:5%;
-      z-index : 2 ;
-    }
-    .navbar-list{
-      overflow-x: hidden;
-      position: fixed;
-      background-color:rgba(35, 66, 113, 0.9);
-      background-size: cover;
-      height: 90vh;
-      width:112%;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-around;
-      clip-path: circle(100px at 90% -20%);
-      -webkit-clip-path:circle(100px at 90% -20%);
-      transition : all 1s ease-out;
-      z-index:2;
-    }
-    .navbar-list.open{
-      clip-path: circle(1050px at 90% -20%);
-      -webkit-clip-path:circle(1050px at 90% -20%);
-      z-index: 3;
-    }
-    .tagline{
-      display:none;
-    }
-    .container-style{
-      width:112%;
-      position: initial;
-    }
+     .hamburger{
+    position:absolute;
+    top:50%;
+    transform: translate(-5%,-50%);
+    cursor:pointer;
+    right:0;
+    z-index : 2 ;
+  }
+  .navbar-list{
+    overflow-x: hidden;
+    position: absolute;
+   background: rgba(35, 66, 113, 0.9);
+    background-size: cover;
+    height: 50vh;
+    width:100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    clip-path: circle(100px at 90% -32%);
+    -webkit-clip-path:circle(100px at 90% -32%);
+    transition : all 1s ease-out;
+    z-index:2;
+  }
+  .navbar-list.open{
+    clip-path: circle(1050px at 90% -20%);
+    -webkit-clip-path:circle(1050px at 90% -20%);
+    z-index: 1000;
+  }
+  .tagline{
+    display:none;
+  }
+  .container-style{
+    width:105%;
+    position: initial;
+  }
     .contact-style{
       padding-right: 0;
     }
